Fix style on auth pages
Squashed commit of the following:

format(register): Reformat lines above 80 cols
refactor(login-register): Refactor frontend, improve resizing, responsiveness

--- a/website/static/css/users/auth.css
+++ b/website/static/css/users/auth.css
@@ -3,13 +3,11 @@
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
+    background-attachment: fixed;
 }
 
 .auth-body-style {
     height: 100vh !important;
     background-color: var(--main-light-color) !important;
     padding-top: 0px !important;
-    justify-content: center;
-    display: flex;
-    flex-direction: column;
 }
